--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Upload for Sentiment Analysis</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+      .transcript {
+          white-space: pre-wrap; /* Allows text to wrap and preserves whitespace */
+          word-break: break-word; /* Ensures long words do not cause horizontal scrolling */
+      }
+    </style>
 </head>
 <body>
 <div class="container mt-5">
@@ -27,10 +34,12 @@
     {% endif %}
     
     {% if transcript %}
+  
     <div class="alert alert-secondary" role="alert">
-        <h4 class="alert-heading">Transcript:</h4>
-        <pre>{{ transcript }}</pre>
+      <h4 class="alert-heading">Transcript:</h4>
+      <pre class="transcript">{{ transcript }}</pre>
     </div>
+
     {% endif %}
 </div>
 
